# yacht

./: .gitignore  YACHT_ROLLOUT.md  yacht-build.sh  yacht-launch.sh
yacht-android/: .gitignore  README.md  keystore.properties.example  settings.gradle.kts
yacht-android/app/: build.gradle.kts
yacht-android/app/src/main/: AndroidManifest.xml
yacht-android/app/src/main/java/com/yacht/mobile/: MainActivity.kt  MainViewModel.kt
yacht-android/app/src/main/java/com/yacht/mobile/ui/components/: UiComponents.kt
yacht-android/app/src/main/java/com/yacht/mobile/ui/screens/: AccountScreen.kt  AuthScreen.kt  ComposeScreen.kt  DashboardScreen.kt  RunScreen.kt  YachtApp.kt
yacht-android/app/src/main/java/com/yacht/mobile/ui/theme/: Color.kt  Theme.kt  Type.kt
yacht-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
yacht-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
yacht-android/app/src/main/res/values-night/: themes.xml
yacht-cloud/: .env.example  README.md  pyproject.toml
yacht-cloud/src/yacht_cloud/: auth.py  compose_runtime.py  config.py  db.py  main.py  quota.py  remote_exec.py  schemas.py  tokens.py
yacht-mobile/: README.md  pyproject.toml
yacht-mobile/src/yacht/: cache.py  cli.py  compose_support.py  hydrate.py  image_ref.py  registry.py  remote_docker.py  runner.py  webapp.py
yacht-mobile/src/yacht/templates/: index.html
yacht-mobile/src/yacht_mobile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
